@@ -5,6 +5,8 @@
 	it will also work for do_fileresearch().
 	* src/text.c (do_int_spell_fix): Save and restore the global flags
 	in the same short and quick way as above.
+	* src/nano.c (main): Initialize the search and replace strings in
+	a central place, to get rid of a bunch of ifs.
 
 2015-04-20  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (need_horizontal_update, need_vertical_update): Fuse
